updates, more camera options tried out

--- a/src/App.css
+++ b/src/App.css
@@ -29,11 +29,11 @@ button {
   background-image: url('./pics/greenglobe.jpg');
 }
 
-/* .Sustainable--Smart-1-hex { color: #F2F23D; }
+ .Sustainable--Smart-1-hex { color: #F2F23D; }
 .Sustainable--Smart-2-hex { color: #1C3A2C; }
 .Sustainable--Smart-3-hex { color: #FFFFD9; }
 .Sustainable--Smart-4-hex { color: #6F9100; }
-.Sustainable--Smart-5-hex { color: #98BF82; } */
+.Sustainable--Smart-5-hex { color: #98BF82; } 
 
 
 
